force-app/main/default/objects/Update_SBTR_Field_Values__mdt/Update_SBTR_Field_Values__mdt.object-meta.xml
<CustomObject>
    <label>Update SBTR Field Values</label>
    <pluralLabel>Update SBTR Field Values</pluralLabel>
</CustomObject>