force-app/main/default/objects/Update_SBTR_Field_Values__mdt/fields/Object_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_API__c</fullName>
    <label>Object Field API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>