force-app/main/default/objects/Update_SBTR_Field_Values__mdt/fields/SBTR_Field_API__c.field-meta.xml
<CustomField>
    <fullName>SBTR_Field_API__c</fullName>
    <label>SBTR Field API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>